<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b_c"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="clearBTN"
                android:text="@string/C"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_par"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="parBTN"
                android:text="@string/par"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_exp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="troisBTN"
                android:text="@string/exp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_devide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="devideBTN"
                android:text="@string/deviser"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b_1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="unBTN"
                android:text="@string/un"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="deuxBTN"
                android:text="@string/deux"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="troisBTN"
                android:text="@string/trois"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_mult"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="multBTN"
                android:text="@string/fois"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b_4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="quatreBTN"
                android:text="@string/quatre"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="cinqBTN"
                android:text="@string/cinq"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_moins"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="moinBTN"
                android:text="@string/moin"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b_7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="septBTN"
                android:text="@string/sept"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="huitBTN"
                android:text="@string/huit"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="neufBTN"
                android:text="@string/neuf"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="plusBTN"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b_0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="zeroBTN"
                android:text="@string/huit"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_egal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="2.2"
                android:background="@drawable/buttonstyle"

                android:onClick="egalBTN"
                android:text="@string/egal"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageButton
                android:id="@+id/delete"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:onClick="deleteBTN"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:srcCompat="@drawable/delete" />

        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="TextView"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>